--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,14 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <%#  we can add a conditional statement to find out if the user is logged in or if the current user exist.  %>  
+    <% if (currentUser) {%>
     <p>Welcome to <%= currentUser.last_name %></p>
-
+    <%}%>    
+    <% if (user) {%>
+      <h1>WELCOME BACK <%= user.username %></h1>
+      <a href="/log-out">LOG OUT</a>
+    <% } else { %>
     <h1>please log in</h1>
     <form action="/log-in" method="POST">
       <label for="username">Username</label>
@@ -15,6 +21,7 @@
       <label for="password">Password</label>
       <input name="password" type="password" />
       <button>Log In</button>
-    </form>  
+    </form>
+    <%}%>  
   </body>
 </html>
