--- a/views/user_registration_form.ejs
+++ b/views/user_registration_form.ejs
@@ -17,6 +17,8 @@
     <input name="username" placeholder="username" type="text" /> <br>
     <label for="password">Password</label>
     <input name="password" placeholder="Password" type="password" /> <br>
+    <label for="confirmPasssword">Confirm Password</label>
+    <input name="confirmPassword" placeholder="Confirm your password" type="password" /> <br>
     <button>Sign Up</button>
   </form>
 </body>
