--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,12 @@
     <%#  we can add a conditional statement to find out if the user is logged in or if the current user exist.  %>  
     <% if (currentUser) {%>
     <p>Welcome to <%= currentUser.member_status %></p>
-    <%}%>    
+    <%}%>
+    
+    <% if (currentUser && currentUser.member_status !==  ) {%>
+      <p>Welcome to <%= currentUser.member_status %></p>
+      <%}%> 
+
     <% if (user) {%>
       <h1>WELCOME BACK <%= user.username %></h1>
       <a href="/log-out">LOG OUT</a>
