--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
     <h1><%= title %></h1>
     <%#  we can add a conditional statement to find out if the user is logged in or if the current user exist.  %>  
     <% if (currentUser) {%>
-    <p>Welcome to <%= currentUser._id %></p>
+    <p>Welcome to <%= currentUser.username %></p>
+    <a href="/members/post/create"> Create new new message </a> 
     <%}%>
     
     <% if (currentUser && currentUser.member_status !== "Member" ) {%>
